--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -62,9 +62,11 @@ iConnect will be referred to as *address book* in the following documentation.
 
 === Viewing help : `help` _[Since v1.3]_
 
+If you don't know how to use some commands, don't worry, help command can guide you.
+
 _Alias:_ `h`
 
-Shows the usage of the given command word.
+You can look up the usage of the given command word using help command.
 
 Format: `help COMMAND`
 
@@ -186,10 +188,11 @@ Returns list of persons sorted by phone in ascending order
 Returns list of persons sorted by time added in descending order
 
 === Deleting a person : `delete` _[Since v1.2]_
+If you want to keep your person list clean, just using delete command to remove some people to bin.
 
 _Alias:_ `remove` `-`
 
-Deletes a group of people from the address book.
+You can delete a group of people from the address book.
 
 Format:`delete I/INDEX INDEX ...` (or) `delete n/Name`
 
@@ -405,7 +408,9 @@ Removes 3 events with the index 1, 2 and 3.
 
 === Making a backup address book: `export` _[Coming in v1.4]_
 
-Backup your contact details to the given path.
+If you want to keep your address book clean and worry about how to get the contacts back, just export the information.
+
+You can keep a backup of your contact details to the given path.
 
 Format: `export PATH`
 
@@ -501,15 +506,19 @@ The `redo` command fails as there are no `undo` commands executed previously
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
 
-=== Listing all persons removed: `bin-list` _[Coming in v2.0]_
+=== Listing all persons removed: `bin-list` _[Since v1.5]_
 
-Shows a list of persons removed from the address book.
+If you are worrying about deleting people wrongly, it would be a good way to see if they are in recycle bin.
+
+You can see a list of persons removed from the address book.
 
 Format: `bin-list`
 
-=== Restoring person(s) : `bin-restore` _[Coming in v2.0]_
+=== Restoring person(s) : `bin-restore` _[Since v1.5]_
 
-Restores person(s) from bin.
+You find that people you wrongly deleted from address book in recycle bin, you can restore them back now.
+
+You can restore person(s) from bin to address book.
 
 Format: `bin-restore INDEX INDEX ...`
 
@@ -526,7 +535,28 @@ Examples:
 `bin-restore 1 2` +
 Restores the 1st and 2nd person in the bin-list
 
-=== Clearing all contacts from bin : `bin-clear` _[Coming in v2.0]_
+=== Restoring person(s) : `bin-delete` _[Since v1.5]_
+
+If you want to keep your recycle bin clean, you can delete some of them from recycle bin. But you can't get them back.
+
+You can delete person(s) from bin.
+
+Format: `bin-delete INDEX INDEX ...`
+
+****
+* Recovers the people at these given specified `INDEX`.
+* The index refers to the index number shown in the most recent bin-list.
+* The index *must be a positive integer* 1, 2, 3, ...
+* The index must not be greater than the most recent bin size.
+****
+
+Examples:
+
+* `bin-list` +
+`bin-delete 1 2` +
+Delete the 1st and 2nd person in the bin-list
+
+=== Clearing all contacts from bin : `bin-clear` _[Since v1.5]_
 
 Clears all entries in the bin.
 
@@ -588,6 +618,14 @@ e.g. `s-add m/1 2 3 n/iConnect Conference t/2017-12-04 08:45 d/120`
 e.g. `s-remove e/1 2 3`
 * *Export* : `export PATH` +
 e.g. `export /desktop/new_folder`
+* *Bindelete* : `bin-delete INDEX INDEX...` +
+e.g. `bin-delete 1 2 3`
+* *Binlist* : `bin-list` +
+e.g. `bin-list`
+* *Binrestore* : `bin-restore INDEX INDEX...` +
+e.g. `bin-restore 1 2 3`
+* *Binclear* : `bin-clear` +
+e.g. `bin-clear`
 * *Select* : `select INDEX` +
 e.g.`select 2`
 * *History* : `history`
