Update collated code

--- a/collated/main/john19950730.md
+++ b/collated/main/john19950730.md
@@ -1,10 +1,24 @@
 # john19950730
+###### \java\seedu\address\logic\autocomplete\AutoCompleteLogic.java
+``` java
+public interface AutoCompleteLogic {
+
+    /**
+     * Generates all possible complete input that the user potentially want,
+     * based on incomplete user input supplied.
+     * @param stub incomplete user input specified.
+     * @return AutoCompletePossibilities object containing list of all possible complete input.
+     */
+    AutoCompletePossibilities generateAutoCompletePossibilities(String stub);
+
+}
+```
 ###### \java\seedu\address\logic\autocomplete\AutoCompleteManager.java
 ``` java
 /**
  * Manages autocomplete logic, as well as optimizations such as memoization.
  */
-public class AutoCompleteManager {
+public class AutoCompleteManager implements AutoCompleteLogic {
 
     private final Logger logger = LogsCenter.getLogger(AutoCompleteManager.class);
 
@@ -39,6 +53,11 @@ public class AutoCompleteManager {
         maxSize = size;
     }
 
+    @Override
+    public AutoCompletePossibilities generateAutoCompletePossibilities(String stub) {
+        return search(stub);
+    }
+
     /**
      * Searches the cache for old AutoCompletePossibilities that has already been evaluated and stored,
      * based on the command stub specified.
@@ -46,7 +65,7 @@ public class AutoCompleteManager {
      * @return AutoCompletePossibilities object that contains all autocomplete options,
      * new object will be generated if not found in cache
      */
-    public AutoCompletePossibilities search(String stub) {
+    private AutoCompletePossibilities search(String stub) {
         for (AutoCompletePossibilities entryInCache : cache) {
             if (stub.equals(entryInCache.getStub())) {
                 logger.info("Found memoized autocomplete options.");
@@ -577,7 +596,7 @@ public class IdentityParser implements AutoCompleteParser {
 
     @Override
     public void updateAutoCompletePossibilities(String stub) {
-        autoCompletePossibilities = autoCompleteManager.search(stub);
+        autoCompletePossibilities = autoCompleteLogic.generateAutoCompletePossibilities(stub);
     }
 
 }
