finalised portfolio and edited UG

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -169,6 +169,12 @@ Examples:
 Adds a photo `cutedog.png` to the first person of PEERSONAL.
 * `addphoto 1` or `addphoto 1 f/` +
 Removes the current photo from the first person of PEERSONAL.
+
+[NOTE]
+====
+Only images in `.jpg` and `.png` are supported.
+====
+
 // end::addphoto[]
 
 === Selecting a person : `select`
@@ -209,7 +215,7 @@ Format: `undo`
 
 [NOTE]
 ====
-Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit` and `clear`).
+Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit`, `addphoto`, `birthday`, `remark`, `sort` and `clear`).
 ====
 
 Examples:
