--- a/docs/team/yapzuoxuan.adoc
+++ b/docs/team/yapzuoxuan.adoc
@@ -6,7 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == Project: AddressBook - Level 4
 PEERSONAL is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/main/wishingmaid.md[Functional code]] [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/test/wishingmaid.md[Test code]] {give links to collated code files}
 
 === Enhancement Added: Undo/Redo
 
@@ -52,9 +52,8 @@ include::../UserGuide.adoc[tag=import]
 
 === Other contributions
 
-* Updated the GUI color scheme and appearance (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-* Designed the PEERSONAL icon
+* Updated the GUI color scheme and appearance (Pull requests https://github.com/CS2103AUG2017-T10-B2/main/pull/76[#76], https://github.com/CS2103AUG2017-T10-B2/main/pull/87[#87])
+* Designed the PEERSONAL icon (Pull request https://github.com/CS2103AUG2017-T10-B2/main/pull/44/files[#44])
 
 == Project: PowerPointLabs
 
