--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -531,6 +531,7 @@ Changes the 3rd contact's note to "This is a note" +
 Removes all existing notes from the 3rd person
 // end::note[]
 
+// tag::backupandrestore[]
 === Creating a backup : `backup`
 
 ====
@@ -588,6 +589,7 @@ An error message will be shown if you do not already have a backup file in the d
 
 image:Restore_5.png[600] +
 _Figure 4.13.5_ +
+// end::backupandrestore[]
 
 // tag::sync[]
 === Logging in to Google Contacts: `login`
