Resolve indentation issues

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -602,8 +602,7 @@ the user, while being able to inform users on the mistakes that they have made.
 
 **Aspect:** Location for Implementation of File Path Validation +
 **Alternative 1 (current choice):** In `Storage` +
-**Pros:** Validation is not just done for user input file paths (ie. via `import` and `export` commands), but also +
-for the address book file path as defined in the user's preferences (ie. `preferences.json`). +
+**Pros:** Validation is not just done for user input file paths (ie. via `import` and `export` commands), but also for the address book file path as defined in the user's preferences (ie. `preferences.json`). +
 **Cons:** Validation is performed after every execution of an `UndoableCommand` due to the saving of the address book. +
 **Alternative 2:** In `CommandParser` +
 **Pros:** Validation will not be done after every execution of an `UndoableCommand` unnecessarily. +
