Add AddAvatarCommand and AddAvatarCommandParser classes

--- a/collated/test/low5545.md
+++ b/collated/test/low5545.md
@@ -1,5 +1,5 @@
 # low5545
-###### \java\seedu\address\logic\commands\ExportCommandTest.java
+###### /java/seedu/address/logic/commands/ExportCommandTest.java
 ``` java
 /**
  * Contains integration tests (interaction with the Model and Storage) and unit tests for {@code ExportCommand}.
@@ -41,6 +41,15 @@ public class ExportCommandTest {
     @Test
     public void execute_invalidName_throwsCommandException() {
         String filePath = getTempFilePath("invalidExportC*.xml");
+        ExportCommand command = prepareCommand(filePath);
+        String expectedMessage = ExportCommand.MESSAGE_INVALID_NAME;
+
+        assertCommandFailure(command, expectedMessage, filePath);
+    }
+
+    @Test
+    public void execute_missingFileName_throwsCommandException() {
+        String filePath = getTempFilePath(".xml");
         ExportCommand command = prepareCommand(filePath);
         String expectedMessage = ExportCommand.MESSAGE_INVALID_NAME;
 
@@ -100,7 +109,7 @@ public class ExportCommandTest {
      * Helper method to provide temporary file paths
      */
     private String getTempFilePath(String fileName) {
-        return testFolder.getRoot().getPath() + fileName;
+        return testFolder.getRoot().getPath() + File.separator + fileName;
     }
 
     /**
@@ -146,7 +155,7 @@ public class ExportCommandTest {
 
 }
 ```
-###### \java\seedu\address\logic\commands\imports\ImportXmlCommandTest.java
+###### /java/seedu/address/logic/commands/imports/ImportXmlCommandTest.java
 ``` java
 /**
  * Contains integration tests (interaction with the Model and Storage) and unit tests for {@code ImportXmlCommand}.
@@ -211,6 +220,15 @@ public class ImportXmlCommandTest {
     @Test
     public void executeUndoableCommand_invalidName_throwsCommandException() {
         String filePath = getTempFilePath("invalidImportXmlD*.xml");
+        ImportXmlCommand command = prepareCommand(filePath);
+        String expectedMessage = ImportCommand.MESSAGE_INVALID_NAME;
+
+        assertCommandFailure(command, model, expectedMessage);
+    }
+
+    @Test
+    public void executeUndoableCommand_missingFileName_throwsCommandException() {
+        String filePath = getTempFilePath(".xml");
         ImportXmlCommand command = prepareCommand(filePath);
         String expectedMessage = ImportCommand.MESSAGE_INVALID_NAME;
 
@@ -284,7 +302,7 @@ public class ImportXmlCommandTest {
      * Helper method to provide temporary file paths
      */
     private String getTempFilePath(String fileName) {
-        return testFolder.getRoot().getPath() + fileName;
+        return testFolder.getRoot().getPath() + File.separator + fileName;
     }
 
     /**
