--- a/collated/main/low5545.md
+++ b/collated/main/low5545.md
@@ -1,67 +1,136 @@
 # low5545
-###### \java\seedu\address\commons\exceptions\InvalidFileExtensionException.java
+###### /java/seedu/address/model/person/UniquePersonList.java
 ``` java
-/**
- * Signals that a given file extension does not fulfill some constraints
- */
-public class InvalidFileExtensionException extends InvalidFilePathException {
+    /**
+     * Adds all persons in the argument person list to this list.
+     */
+    public void addPersons(List<? extends ReadOnlyPerson> persons) {
+        for (final ReadOnlyPerson person : persons) {
+            try {
+                this.add(new Person(person));
+            } catch (DuplicatePersonException e) {
+                // skip person if it exists
+            }
+        }
+    }
+```
+###### /java/seedu/address/model/AddressBook.java
+``` java
+    /**
+     * Adds all persons in the argument person list to this list.
+     */
+    public void addPersons(List<? extends ReadOnlyPerson> persons) {
+        this.persons.addPersons(persons);
+    }
+```
+###### /java/seedu/address/model/AddressBook.java
+``` java
+    /**
+     * Adds all events in the argument event list to this list.
+     */
+    public void addEvents(List<? extends ReadOnlyEvent> events) {
+        this.events.addEvents(events);
+    }
+```
+###### /java/seedu/address/model/AddressBook.java
+``` java
+    /**
+     * Adds all tags in the argument tag list to this list.
+     */
+    public void addTags(Set<Tag> tags) {
+        this.tags.addTags(tags);
+    }
+```
+###### /java/seedu/address/model/AddressBook.java
+``` java
+    /**
+     * Adds extra {@code newData} into the existing data of this {@code AddressBook}.
+     */
+    public void addData(ReadOnlyAddressBook newData) {
+        requireNonNull(newData);
 
-    public InvalidFileExtensionException() {
-        super();
+        addPersons(newData.getPersonList());
+        addEvents(newData.getEventList());
+        addTags(new HashSet<>(newData.getTagList()));
+        syncMasterTagListWith(persons);
+    }
+```
+###### /java/seedu/address/model/ModelManager.java
+``` java
+    @Override
+    public void addData(ReadOnlyAddressBook newData) {
+        addressBook.addData(newData);
+        addressBook.sortPersonList();
+        addressBook.sortEventList();
+        indicateAddressBookChanged();
+    }
+```
+###### /java/seedu/address/model/Model.java
+``` java
+    /** Adds extra data to the existing model */
+    void addData(ReadOnlyAddressBook newData);
+```
+###### /java/seedu/address/model/tag/UniqueTagList.java
+``` java
+    /**
+     * Adds all tags in the argument tag list to this list.
+     */
+    public void addTags(Set<Tag> tags) {
+        requireAllNonNull(tags);
+
+        for (final Tag tag : tags) {
+            try {
+                this.add(new Tag(tag));
+            } catch (DuplicateTagException e) {
+                // skip tag if it exists
+            }
+        }
+    }
+```
+###### /java/seedu/address/model/tag/Tag.java
+``` java
+    /**
+     * Creates a copy of the given Tag.
+     */
+    public Tag(Tag tag) {
+        requireNonNull(tag);
+        this.tagName = tag.tagName;
+
+        // Adds an entry in TagColorManager if there is no entry yet.
+        if (!TagColorManager.contains(this)) {
+            TagColorManager.setColor(this);
+        }
+    }
+```
+###### /java/seedu/address/model/event/UniqueEventList.java
+``` java
+    /**
+     * Adds all events in the argument events list to this list.
+     */
+    public void addEvents(List<? extends ReadOnlyEvent> events) {
+        for (final ReadOnlyEvent event : events) {
+            try {
+                this.add(new Event(event));
+            } catch (DuplicateEventException e) {
+                // skip event if it exists
+            }
+        }
     }
 
-    public InvalidFileExtensionException(String message) {
-        super(message);
-    }
-}
 ```
-###### \java\seedu\address\commons\exceptions\InvalidFilePathException.java
-``` java
-/**
- * Signals that a given file path does not fulfill some requirements
- */
-public class InvalidFilePathException extends Exception {
-    public InvalidFilePathException() {
-        super();
-    }
-
-    public InvalidFilePathException(String message) {
-        super(message);
-    }
-}
-```
-###### \java\seedu\address\commons\exceptions\InvalidNameException.java
-``` java
-/**
- * Signals that a given file name or folder name contains invalid characters
- */
-public class InvalidNameException extends InvalidFilePathException {
-    public InvalidNameException() {
-        super();
-    }
-}
-```
-###### \java\seedu\address\commons\exceptions\InvalidNameSeparatorException.java
-``` java
-/**
- * Signals that a given file path contains invalid name-separator characters
- */
-public class InvalidNameSeparatorException extends InvalidFilePathException {
-    public InvalidNameSeparatorException() {
-        super();
-    }
-}
-```
-###### \java\seedu\address\commons\util\FileUtil.java
+###### /java/seedu/address/commons/util/FileUtil.java
 ``` java
     private static final Pattern XML_FILE_FORMAT = Pattern.compile(".*\\.xml$");
     private static final Pattern UNIX_NAME_SEPARATOR_FORMAT = Pattern.compile(".*/.*");
     private static final Pattern WINDOWS_NAME_SEPARATOR_FORMAT = Pattern.compile(".*\\\\.*");
     private static final Pattern INVALID_NAME_CHARACTERS_FORMAT = Pattern.compile(".*[?!%*+:|\"<>].*");
+    private static final Pattern MISSING_FILE_NAME_FORMAT = Pattern.compile("(^\\.\\w+)"
+                                                                            + "|(.*/\\.\\w+$)"
+                                                                            + "|(.*\\\\\\.\\w+$)");
     private static final Pattern CONSECUTIVE_NAME_SEPARATOR_FORMAT = Pattern.compile("(.*//.*)|(.*\\\\\\\\.*)");
-    private static final Pattern CONSECUTIVE_EXTENSION_SEPARATOR_FORMAT = Pattern.compile(".*\\.\\..*");
+    private static final Pattern CONSECUTIVE_EXTENSION_SEPARATOR_FORMAT = Pattern.compile(".*\\.\\.\\w+");
 ```
-###### \java\seedu\address\commons\util\FileUtil.java
+###### /java/seedu/address/commons/util/FileUtil.java
 ``` java
     /**
      * Checks whether the file specified in the {@code filePath} is a valid XML file
@@ -81,7 +150,7 @@ public class InvalidNameSeparatorException extends InvalidFilePathException {
     }
 
     /**
-     * Checks whether the file name and non-existent folder names in {@filePath} are valid
+     * Checks whether the file name and non-existent folder names in {@code filePath} are valid
      */
     public static boolean hasInvalidNames(String filePath) {
         File file = new File(filePath);
@@ -101,7 +170,14 @@ public class InvalidNameSeparatorException extends InvalidFilePathException {
     }
 
     /**
-     * Checks whether the {@filePath} contain any consecutive name separators (OS-dependent)
+     * Checks whether the {@code filePath} has a missing file name.
+     */
+    public static boolean hasMissingFileName(String filePath) {
+        return MISSING_FILE_NAME_FORMAT.matcher(filePath).matches();
+    }
+
+    /**
+     * Checks whether the {@code filePath} contain any consecutive name separators (OS-dependent)
      *
      * {@link #hasInvalidNameSeparators(String)} should be checked prior this method
      */
@@ -110,7 +186,7 @@ public class InvalidNameSeparatorException extends InvalidFilePathException {
     }
 
     /**
-     * Checks whether the {@filePath} contain any consecutive extension separators (.)
+     * Checks whether the {@code filePath} contain any consecutive extension separators (.)
      *
      */
     public static boolean hasConsecutiveExtensionSeparators(String filePath) {
@@ -118,7 +194,127 @@ public class InvalidNameSeparatorException extends InvalidFilePathException {
     }
 }
 ```
-###### \java\seedu\address\logic\commands\Command.java
+###### /java/seedu/address/commons/exceptions/InvalidNameException.java
+``` java
+/**
+ * Signals that a given file name or folder name contains invalid characters
+ */
+public class InvalidNameException extends InvalidFilePathException {
+    public InvalidNameException() {
+        super();
+    }
+}
+```
+###### /java/seedu/address/commons/exceptions/InvalidFilePathException.java
+``` java
+/**
+ * Signals that a given file path does not fulfill some requirements
+ */
+public class InvalidFilePathException extends Exception {
+    public InvalidFilePathException() {
+        super();
+    }
+
+    public InvalidFilePathException(String message) {
+        super(message);
+    }
+}
+```
+###### /java/seedu/address/commons/exceptions/InvalidNameSeparatorException.java
+``` java
+/**
+ * Signals that a given file path contains invalid name-separator characters
+ */
+public class InvalidNameSeparatorException extends InvalidFilePathException {
+    public InvalidNameSeparatorException() {
+        super();
+    }
+}
+```
+###### /java/seedu/address/commons/exceptions/InvalidFileExtensionException.java
+``` java
+/**
+ * Signals that a given file extension does not fulfill some constraints
+ */
+public class InvalidFileExtensionException extends InvalidFilePathException {
+
+    public InvalidFileExtensionException() {
+        super();
+    }
+
+    public InvalidFileExtensionException(String message) {
+        super(message);
+    }
+}
+```
+###### /java/seedu/address/storage/XmlAddressBookStorage.java
+``` java
+    /**
+     * Helper method to check the validity of an address book data file path
+     */
+    private void validateFilePath(String filePath) throws InvalidFilePathException {
+        if (!FileUtil.isValidXmlFile(filePath)) {
+            throw new InvalidFileExtensionException();
+        } else if (FileUtil.hasInvalidNames(filePath) || FileUtil.hasMissingFileName(filePath)) {
+            throw new InvalidNameException();
+        } else if (FileUtil.hasInvalidNameSeparators(filePath)) {
+            throw new InvalidNameSeparatorException();
+        } else if (FileUtil.hasConsecutiveNameSeparators(filePath)
+                || FileUtil.hasConsecutiveExtensionSeparators(filePath)) {
+            throw new InvalidFilePathException();
+        }
+    }
+}
+```
+###### /java/seedu/address/logic/parser/util/ParserUtil.java
+``` java
+    /**
+     * Parses and trims {@code filePath} if it is not empty.
+     * @throws IllegalValueException if the {@code filePath} is not empty.
+     */
+    public static String parseFilePath(String filePath) throws IllegalValueException {
+        requireNonNull(filePath);
+        filePath = filePath.trim();
+
+        if (filePath.isEmpty()) {
+            throw new IllegalValueException("File path is required");
+        }
+        return filePath;
+    }
+```
+###### /java/seedu/address/logic/parser/ExportCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new {@code ExportCommand} object
+ */
+public class ExportCommandParser implements Parser<ExportCommand> {
+    /**
+     * Parses the given {@code String} of arguments in the context of the ExportCommand
+     * and returns an ExportCommand object for execution.
+     * @throws ParseException if the user input does not conform the expected format
+     */
+    public ExportCommand parse(String args) throws ParseException {
+        try {
+            String filePath = ParserUtil.parseFilePath(args);
+            return new ExportCommand(filePath);
+        } catch (IllegalValueException ive) {
+            throw new ParseException(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, ExportCommand.MESSAGE_USAGE));
+        }
+    }
+}
+```
+###### /java/seedu/address/logic/parser/ImportCommandParser.java
+``` java
+    /**
+     * File path is being checked in {@code XmlAddressBookStorage#validateFilePath(String)}, similar to
+     * {@code ExportCommand}.
+     */
+    private ImportCommand checkXmlImport(String path) {
+        return new ImportXmlCommand(path);
+    }
+```
+###### /java/seedu/address/logic/commands/Command.java
 ``` java
     /**
      * Provides {@code Storage} dependency to the command.
@@ -140,7 +336,7 @@ public class InvalidNameSeparatorException extends InvalidFilePathException {
         this.commandText = commandText;
     }
 ```
-###### \java\seedu\address\logic\commands\ExportCommand.java
+###### /java/seedu/address/logic/commands/ExportCommand.java
 ``` java
 /**
  * Exports the address book to a user defined location {@code filePath}
@@ -160,8 +356,8 @@ public class ExportCommand extends Command {
     public static final String MESSAGE_PROBLEM_WRITING_FILE = "There is a problem exporting to the specified file"
             + " path. Please check that you have permissions to do so.";
     public static final String MESSAGE_NOT_XML_FILE = "The file path does not point to an XML file.";
-    public static final String MESSAGE_INVALID_NAME = "The file path contains file name or folder names with"
-            + " prohibited characters (?!%*+:|\"<>).";
+    public static final String MESSAGE_INVALID_NAME = "The file path contains a file name or folder names with"
+            + " prohibited characters (?!%*+:|\"<>), or a file name is not provided.";
     public static final String MESSAGE_INVALID_NAME_SEPARATOR = "The file path contains name-separators (/ or \\) that"
             + " are not defined in your operating system.";
     public static final String MESSAGE_CONSECUTIVE_SEPARATOR = "The file path contains consecutive"
@@ -205,11 +401,11 @@ public class ExportCommand extends Command {
     }
 }
 ```
-###### \java\seedu\address\logic\commands\imports\ImportCommand.java
+###### /java/seedu/address/logic/commands/imports/ImportCommand.java
 ``` java
     public static final String MESSAGE_FILE_NOT_FOUND = "The specified file does not exist.";
-    public static final String MESSAGE_INVALID_NAME = "The file path contains file name or folder names with"
-            + " prohibited characters (?!%*+:|\"<>).";
+    public static final String MESSAGE_INVALID_NAME = "The file path contains a file name or folder names with"
+            + " prohibited characters (?!%*+:|\"<>), or a file name is not provided.";
     public static final String MESSAGE_INVALID_NAME_SEPARATOR = "The file path contains name-separators (/ or \\) that"
             + " are not defined in your operating system.";
     public static final String MESSAGE_CONSECUTIVE_SEPARATOR = "The file path contains consecutive"
@@ -217,7 +413,7 @@ public class ExportCommand extends Command {
     public static final String MESSAGE_INVALID_XML_DATA_FORMAT = "The data in the specified XML file is not in the"
             + " correct format as recognized by BoNUS.\nPlease try to import from another XML file.";
 ```
-###### \java\seedu\address\logic\commands\imports\ImportXmlCommand.java
+###### /java/seedu/address/logic/commands/imports/ImportXmlCommand.java
 ``` java
 /**
  * Imports data from a xml file (in BoNUS-specific format) to the application.
@@ -255,192 +451,6 @@ public class ImportXmlCommand extends ImportCommand {
     @Override
     public void setStorage(Storage storage) {
         this.storage = storage;
-    }
-}
-```
-###### \java\seedu\address\logic\parser\ExportCommandParser.java
-``` java
-/**
- * Parses input arguments and creates a new {@code ExportCommand} object
- */
-public class ExportCommandParser implements Parser<ExportCommand> {
-    /**
-     * Parses the given {@code String} of arguments in the context of the ExportCommand
-     * and returns an ExportCommand object for execution.
-     * @throws ParseException if the user input does not conform the expected format
-     */
-    public ExportCommand parse(String args) throws ParseException {
-        try {
-            String filePath = ParserUtil.parseFilePath(args);
-            return new ExportCommand(filePath);
-        } catch (IllegalValueException ive) {
-            throw new ParseException(
-                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, ExportCommand.MESSAGE_USAGE));
-        }
-    }
-}
-```
-###### \java\seedu\address\logic\parser\ImportCommandParser.java
-``` java
-    /**
-     * File path is being checked in {@code XmlAddressBookStorage#validateFilePath(String)}, similar to
-     * {@code ExportCommand}.
-     */
-    private ImportCommand checkXmlImport(String path) {
-        return new ImportXmlCommand(path);
-    }
-```
-###### \java\seedu\address\logic\parser\util\ParserUtil.java
-``` java
-    /**
-     * Parses and trims {@code filePath} if it is not empty.
-     * @throws IllegalValueException if the {@code filePath} is not empty.
-     */
-    public static String parseFilePath(String filePath) throws IllegalValueException {
-        requireNonNull(filePath);
-        filePath = filePath.trim();
-
-        if (filePath.isEmpty()) {
-            throw new IllegalValueException("File path is required");
-        }
-        return filePath;
-    }
-```
-###### \java\seedu\address\model\AddressBook.java
-``` java
-    /**
-     * Adds all persons in the argument person list to this list.
-     */
-    public void addPersons(List<? extends ReadOnlyPerson> persons) {
-        this.persons.addPersons(persons);
-    }
-```
-###### \java\seedu\address\model\AddressBook.java
-``` java
-    /**
-     * Adds all events in the argument event list to this list.
-     */
-    public void addEvents(List<? extends ReadOnlyEvent> events) {
-        this.events.addEvents(events);
-    }
-```
-###### \java\seedu\address\model\AddressBook.java
-``` java
-    /**
-     * Adds all tags in the argument tag list to this list.
-     */
-    public void addTags(Set<Tag> tags) {
-        this.tags.addTags(tags);
-    }
-```
-###### \java\seedu\address\model\AddressBook.java
-``` java
-    /**
-     * Adds extra {@code newData} into the existing data of this {@code AddressBook}.
-     */
-    public void addData(ReadOnlyAddressBook newData) {
-        requireNonNull(newData);
-
-        addPersons(newData.getPersonList());
-        addEvents(newData.getEventList());
-        addTags(new HashSet<>(newData.getTagList()));
-        syncMasterTagListWith(persons);
-    }
-```
-###### \java\seedu\address\model\event\UniqueEventList.java
-``` java
-    /**
-     * Adds all events in the argument events list to this list.
-     */
-    public void addEvents(List<? extends ReadOnlyEvent> events) {
-        for (final ReadOnlyEvent event : events) {
-            try {
-                this.add(new Event(event));
-            } catch (DuplicateEventException e) {
-                // skip event if it exists
-            }
-        }
-    }
-
-```
-###### \java\seedu\address\model\Model.java
-``` java
-    /** Adds extra data to the existing model */
-    void addData(ReadOnlyAddressBook newData);
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    @Override
-    public void addData(ReadOnlyAddressBook newData) {
-        addressBook.addData(newData);
-        addressBook.sortPersonList();
-        addressBook.sortEventList();
-        indicateAddressBookChanged();
-    }
-```
-###### \java\seedu\address\model\person\UniquePersonList.java
-``` java
-    /**
-     * Adds all persons in the argument person list to this list.
-     */
-    public void addPersons(List<? extends ReadOnlyPerson> persons) {
-        for (final ReadOnlyPerson person : persons) {
-            try {
-                this.add(new Person(person));
-            } catch (DuplicatePersonException e) {
-                // skip person if it exists
-            }
-        }
-    }
-```
-###### \java\seedu\address\model\tag\Tag.java
-``` java
-    /**
-     * Creates a copy of the given Tag.
-     */
-    public Tag(Tag tag) {
-        requireNonNull(tag);
-        this.tagName = tag.tagName;
-
-        // Adds an entry in TagColorManager if there is no entry yet.
-        if (!TagColorManager.contains(this)) {
-            TagColorManager.setColor(this);
-        }
-    }
-```
-###### \java\seedu\address\model\tag\UniqueTagList.java
-``` java
-    /**
-     * Adds all tags in the argument tag list to this list.
-     */
-    public void addTags(Set<Tag> tags) {
-        requireAllNonNull(tags);
-
-        for (final Tag tag : tags) {
-            try {
-                this.add(new Tag(tag));
-            } catch (DuplicateTagException e) {
-                // skip tag if it exists
-            }
-        }
-    }
-```
-###### \java\seedu\address\storage\XmlAddressBookStorage.java
-``` java
-    /**
-     * Helper method to check the validity of an address book data file path
-     */
-    private void validateFilePath(String filePath) throws InvalidFilePathException {
-        if (!FileUtil.isValidXmlFile(filePath)) {
-            throw new InvalidFileExtensionException();
-        } else if (FileUtil.hasInvalidNames(filePath)) {
-            throw new InvalidNameException();
-        } else if (FileUtil.hasInvalidNameSeparators(filePath)) {
-            throw new InvalidNameSeparatorException();
-        } else if (FileUtil.hasConsecutiveNameSeparators(filePath)
-                || FileUtil.hasConsecutiveExtensionSeparators(filePath)) {
-            throw new InvalidFilePathException();
-        }
     }
 }
 ```
