Portfolio: Add person detail panel enhancement

--- a/docs/team/Jolyn.adoc
+++ b/docs/team/Jolyn.adoc
@@ -37,25 +37,46 @@ include::../DeveloperGuide.adoc[leveloffset=2, tag=shortcut]
 
 ---
 
+=== Enhancement Added: Renovate UI Color Scheme and Layout
+
+The user interface of the application has been revamped to take on a clean design, which aims to improve
+the user's experience with Rolodex.
+
+==== External Behavior
+
+---
+
+image::Ui.png[width="800"]
+
+Some features of the UI:
+
+* A keyboard icon in the command box provides visual feedback for certain user events:
+
+** image:keyboard.png[width="30"] : User is idle
+** image:keyboardTyping.png[width="30"] : User is typing
+** image:keyboardError.png[width="30"] : User entered an invalid command
+
+* Split pane which separates the contact list from the other UI components is responsive;
+the divider is automatically maintained at the optimal position
+when window size changes
+* Avatar colors are randomized
+
+---
+
 === Enhancement Added: Person Detail Panel
 
 ==== External Behavior
 
 ---
 
----
+include::../DeveloperGuide.adoc[leveloffset=2, tag=detailPanelBehavior]
 
-==== Justification
-
----
-
----
 
 ==== Implementation
 
 ---
 
-include::../DeveloperGuide.adoc[leveloffset=2, tag=detailPanel]
+include::../DeveloperGuide.adoc[leveloffset=2, tag=detailPanelImp]
 
 ---
 
@@ -76,14 +97,14 @@ include::../UserGuide.adoc[leveloffset=2,tag=remark]
 
 === Enhancement Proposed: Add Profile Pictures
 
+==== External Behavior
+
 ---
 
 include::../UserGuide.adoc[leveloffset=2, tag=picture]
 
 ---
 === Other contributions
-* Updated the GUI layout and color scheme (Pull request https://github.com[#16])
-* Added a keyboard icon in the command box which provides visual feedback for some user events (Pull request https://github.com[#28])
 * Added the removeTag method (Pull request https://github.com[#6])
 * Updated the General Documentation (Pull requests https://github.com[#2], https://github.com[#66])
 
